fix: Fixed flex wrap in tags

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -98,6 +98,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    flex-wrap: wrap;
 
     .tag {
       display: inline-flex;
